--- a/NewsManagementMVC/appsettings.json
+++ b/NewsManagementMVC/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FUNewsManagementDB": "Server=LAPTOP-4SH81D1E\\HAOMG;uid=sa;pwd=12345;database= FUNewsManagement;TrustServerCertificate=True"
+    "FUNewsManagementDB": "Server=SURBOOK2-HP\\TUESANG;uid=sa;pwd=12345;database= FUNewsManagement;TrustServerCertificate=True"
   },
   "AdminAccount": {
     "Email": "admin@FUNewsManagementSystem.org",
