Add register search filter tag

--- a/NewsManagementMVC/appsettings.json
+++ b/NewsManagementMVC/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AdminAccount": {
     "Email": "admin@FUNewsManagementSystem.org",
-    "Password": "@@abc123@@"
+    "Password": "1",
+    //"Password": "@@abc123@@"
   }
 }
