--- a/NewsManagementMVC/appsettings.json
+++ b/NewsManagementMVC/appsettings.json
@@ -11,7 +11,6 @@
   },
   "AdminAccount": {
     "Email": "admin@FUNewsManagementSystem.org",
-    "Password": "1",
-    //"Password": "@@abc123@@"
+    "Password": "@@abc123@@"
   }
 }
